# kitmod-spaghetti-edition

./: .breakpoints  .replit  BadWords.txt  TrolledWords.txt  amounts.json  flagsystem.txt  keep_alive.py  main.py  pyproject.toml  reactrole.json  readme.md  warnData.db
cogs/: activities.py  automations.py  autorole.py  botconfig.py  covid.py  dev.py  economy.py  filter.py  flagsys.py  flg.py  giveaways.py  help.py  help2.py  memes.py  moderation.py  modmail.py  operms.py  random.py  routwarn.py  sniper.py  tags.py  test.py  translate.py  utilities.py  warnings.py  whois.py
