[tool.poetry]
name = "repl_python3_beta_SPVM-Precinct-21-Cogs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"
aiosqlite = "^0.17.0"
colorama = "^0.4.4"
Flask = "^2.0.1"
praw = "^7.4.0"
pytz = "^2021.1"
samp-client = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
