[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_beta_SPVM-Precinct-21-Cogs"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.1"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"
aiosqlite = "^0.17.0"
colorama = "^0.4.4"
praw = "^7.4.0"
python = "^3.8"
pytz = "^2021.1"
samp-client = "^3.0.1"
pydantic = "^1.9.0"
discord = "^1.7.3"
googletrans = "^3.0.0"
[tool.poetry.dev-dependencies]
